# lab_4

./: Building.cpp  Building.hpp  CMakeLists.txt  Instructor.cpp  Instructor.hpp  Makefile  People.cpp  People.hpp  Student.cpp  Student.hpp  University.cpp  University.hpp  inputCheck.cpp  inputCheck.hpp  main.cpp  menuMaker.cpp  menuMaker.hpp
